crates/checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__operations__subscription_root_field.snap
---
source: checker/src/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 2,
            column: 12,
            file: 0,
            builtin: false,
        },
        message: SubscriptionMustHaveExactlyOneRootField,
        additional_info: [],
    },
]
